--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
 
       <div class="banner">
         <img src="img/img/background-header.png" alt="Background header">
+        <h1>Scegli l&apos;inglese studiato per i professionisti</h1>
+        <button>struttura un piano</button>
       </div>
     </header>
 
     <main>
+      <div class="intro">
 
+      </div>
     </main>
 
     <footer>
