Terminata sezione 1 main

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 
     <main>
       <div class="intro">
-
+        <div class="testo-ads">
+          <h2>Le scuole di lungua tradizionali non sono efficaci</h2>
+          <p>Solo un corso incentrato sulla Fluency pu&ograve; portare ad una soluzione definitiva concreta.</p>
+        </div>
       </div>
     </main>
 
